...
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.186" />

    <EditText
        android:id="@+id/editTextTextPersonName18"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="First name"
        android:inputType="textPersonName"
...
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.589" />

    <EditText
        android:id="@+id/editTextTextPersonName8"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="Phone number"
        android:inputType="textPersonName"
...
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.478" />

    <EditText
        android:id="@+id/editTextTextPersonName8123"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="Email"
        android:inputType="textPersonName"
...
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.366" />

    <EditText
        android:id="@+id/editTextTextPersonName811"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="Second name"
        android:inputType="textPersonName"
...
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.418" />

    <Button
        android:id="@+id/button15"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:text="PROCEED"
        android:textColor="@color/white"
        android:backgroundTint="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
...
